cabal-version:      3.0
name:               ghc-events-util
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Simple

common lang
  default-language:
      GHC2021
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Wunused-packages
      -Wprepositive-qualified-module
      -Widentities
  build-depends:
      base >= 4.16 && < 4.17

executable ghc-events-util
  import:
      lang
  main-is:
      Main.hs
  other-modules:
      GhcEventsUtil.Cmdline
      GhcEventsUtil.Regex
  hs-source-dirs:
      app
  build-depends:
    , containers
    , ghc-events
    , optparse-applicative
    , regex-pcre
