cabal-version:      3.0
name:               ghc-events-util
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Simple

common lang
  default-language:
      GHC2021
  default-extensions:
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      GADTs
      LambdaCase
      PatternSynonyms
      TypeFamilies
      UndecidableInstances
      ViewPatterns
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Wunused-packages
      -Wprepositive-qualified-module
      -Widentities
  build-depends:
      -- ghc 9.8
      base >= 4.19 && < 4.20

library
  import:
      lang
  exposed-modules:
      GHC.RTS.Events.Util
  other-modules:
      GHC.RTS.Events.Util.Decorated
      GHC.RTS.Events.Util.Delta
      GHC.RTS.Events.Util.EventInfo
      GHC.RTS.Events.Util.Filter
      GHC.RTS.Events.Util.Incremental
      GHC.RTS.Events.Util.Padding
  hs-source-dirs:
      src
  build-depends:
    , bytestring
    , containers
    , ghc-events
    , regex-pcre
    , text

executable ghc-events-util
  import:
      lang
  main-is:
      Main.hs
  other-modules:
      Cmdline
      Command.ShowDelta
  hs-source-dirs:
      app
  build-depends:
    , ghc-events-util
    , optparse-applicative
    , text
